[package]
name = "tdx-exception"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tdx-tdcall =  { path = "../tdx-tdcall" }
log = "0.4.13"
bitflags = "1.2.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
