[package]
name = "uefi-pi"
version = "0.1.0"
description = "UEFI Platform Independent data structures"
repository = "https://github.com/confidential-containers/td-shim"
homepage = "https://github.com/confidential-containers"
license = "BSD-2-Clause-Patent"
edition = "2018"

[dependencies]
r-efi = "3.2.0"
r-uefi-pi =  { path = "../r-uefi-pi" }
scroll = { version = "0.10", default-features=false}
