[package]
name = "td-benchmark"
version = "0.1.0"
description = "Library to support benchmark for no_std binaries"
repository = "https://github.com/confidential-containers/td-shim"
homepage = "https://github.com/confidential-containers"
license = "BSD-2-Clause-Patent"
edition = "2018"

[dependencies]
linked_list_allocator = "0.10.4"
log = "0.4.13"
x86 = { version = "0.47.0", optional = true }
scroll = { version = "0.10", default-features = false, features = ["derive"], optional = true }
td-layout = { path = "../../td-layout", optional = true }

lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.2"

[dev-dependencies]
alloca = "0.3.3"
